2023-12-18,, 페이징처리+ongoing최신순으로 수정, 수정후 테스트 코드 작성