@@ -9,9 +9,13 @@ import com.example.thicketstage.enumerate.StageType;
 import com.example.thicketstage.repository.StageRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
@@ -43,18 +47,23 @@ public class StageServiceImpl implements StageService{
         return dtos;
     }
 
-    // STATUS.ONGOING 인 공연 모두 최신 순으로 - 작성중
-//    @Override
-//    public Page<ResponseStageThumbnailDto> getOngoingList(StageStatus stageStatus,
-//                                                          Pageable pageable) {
-//        Page<Stage> stages
-//                = stageRepository.findByStageStatusOrderByCreateAtDesc(StageStatus.ONGOING,
-//                                                                        pageable);
-//        if(stages.isEmpty()){
-//            throw new EntityNotFoundException("해당 공연이 존재하지 않습니다");
-//        }
-//        return stages.map(ResponseStageThumbnailDto::new);
-//    }
+    // 진행 중인 공연 모두 최신 순으로
+    @Override
+    public Page<ResponseStageThumbnailDto> getOngoingList(Pageable pageable){
+        LocalDateTime now = LocalDateTime.now();
+
+        List<Stage> allStages = stageRepository.findAll();
+        List<Stage> ongoingStages = allStages.stream()
+                .filter(stage -> stage.getStageOpen().isBefore(now) && stage.getStageClose().isAfter(now))
+                .collect(Collectors.toList());
+
+        if (ongoingStages.isEmpty()) {
+            throw new EntityNotFoundException("현재 진행 중인 공연이 없습니다.");
+        }
+
+        return new PageImpl<>(ongoingStages, pageable, ongoingStages.size())
+                .map(ResponseStageThumbnailDto::new);
+    }
 
     // 공연 하나 선택 했을 때 상세 페이지 조회 되게
     @Override
@@ -69,31 +78,59 @@ public class StageServiceImpl implements StageService{
         return new ResponseStageDto(stage);
     }
 
-    // StageType 별로 줄 세우기
+    // StageType 별로 줄 세우기 - 진행 중인 공연 최신 등록 순으로 정렬 + 페이징처리
     @Override
-    public List<ResponseStageThumbnailDto> getStageTypeList(StageType stageType) {
-        List<Stage> stages = stageRepository.findByStageType(stageType);
+    public Page<ResponseStageThumbnailDto> getStageTypeList(StageType stageType, Pageable pageable) {
+        LocalDateTime now = LocalDateTime.now();
 
-        if(stages.isEmpty()){
-            throw new EntityNotFoundException("해당 공연이 존재하지 않습니다");
+        List<Stage> stages = stageRepository.findByStageType(stageType);
+        List<Stage> ongoingStages = stages.stream()
+                .filter(stage -> stage.getStageOpen().isBefore(now) && stage.getStageClose().isAfter(now))
+                .toList();
+
+        if(ongoingStages.isEmpty()){
+            throw new EntityNotFoundException("현재 진행 중인 공연이 없습니다.");
         }
 
-        return stages.stream().map(ResponseStageThumbnailDto::new)
-                                .collect(Collectors.toList());
+        return new PageImpl<>(ongoingStages, pageable, ongoingStages.size())
+                .map(ResponseStageThumbnailDto::new);
     }
 
-    // stageStatus 별로 줄 세우기
-//    @Override
-//    public List<ResponseStageThumbnailDto> getStageStatusList(StageStatus stageStatus){
-//        List<Stage> stages = stageRepository.findByStageStatus(stageStatus);
-//
-//        if(stages.isEmpty()){
-//            throw new EntityNotFoundException("해당 공연이 존재하지 않습니다");
-//        }
-//
-//        return stages.stream().map(ResponseStageThumbnailDto::new)
-//                                .collect(Collectors.toList());
-//    }
+    // -> /shows/before - ticketopen시간 비교해서 이전인것만 - 커밍순 main
+    @Override
+    public Page<ResponseStageThumbnailDto> getComingSoonList(Pageable pageable){
+        LocalDateTime now = LocalDateTime.now();
+
+        List<Stage> allStages = stageRepository.findAll();
+        List<Stage> comingSoonStages = allStages.stream()
+                .filter(stage -> stage.getTicketOpen().isAfter(now))
+                .toList();
+
+        if (comingSoonStages.isEmpty()) {
+            throw new EntityNotFoundException("현재 진행 중인 공연이 없습니다.");
+        }
+
+        return new PageImpl<>(comingSoonStages, pageable, comingSoonStages.size())
+                .map(ResponseStageThumbnailDto::new);
+    }
+
+    // -> /shows/ended - stageClose보다 이후 - 관리자 page -- 타입을 가져와서 나눠야하나???
+    @Override
+    public Page<ResponseStageThumbnailDto> getEndedList(Pageable pageable){
+        LocalDateTime now = LocalDateTime.now();
+
+        List<Stage> allStages = stageRepository.findAll();
+        List<Stage> endedStages = allStages.stream()
+                .filter(stage -> stage.getStageClose().isBefore(now))
+                .toList();
+
+        if (endedStages.isEmpty()) {
+            throw new EntityNotFoundException("종료된 공연이 없습니다.");
+        }
+
+        return new PageImpl<>(endedStages, pageable, endedStages.size())
+                .map(ResponseStageThumbnailDto::new);
+    }
 
     @Override
     public List<ResponseStageThumbnailDto> searchStage(String keyword) {
@@ -121,20 +158,6 @@ public class StageServiceImpl implements StageService{
                 .orElseThrow(() -> new EntityNotFoundException("공연을 찾을 수 없습니다."));
         stage.updateStageInfo(updateInfoDto);
     }
-
-//    @Override
-//    public void changeStatus(String uuid, RequestSetNewStatusDto setNewStatusDto) {
-//        Optional<Stage> optionalStage = stageRepository.findByUuid(uuid);
-//
-//        if(optionalStage.isEmpty()){
-//            throw new EntityNotFoundException("공연을 찾을 수 없습니다.");
-//        }
-//        Stage stage = optionalStage.get();
-//        StageStatus newStatus = setNewStatusDto.getNewStatus();
-//
-//        stage.setStageStatus(newStatus);
-//        stageRepository.save(stage);
-//    }
 
     @Override
     public void deleteStage(String uuid) {
